Learning - Setting up a testFramework

--- a/CGSE-Final/imgui.ini
+++ b/CGSE-Final/imgui.ini
@@ -1,5 +1,10 @@
 [Window][Debug##Default]
-Pos=525,26
+Pos=486,94
 Size=411,410
+Collapsed=0
+
+[Window][Test]
+Pos=566,76
+Size=363,324
 Collapsed=0
 
